--- a/index.html
+++ b/index.html
@@ -18,16 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Topitdownloader</h1>
-          <h2>Topit Img Downloader</h2>
+          <h2>Topit专辑原图批量下载</h2>
         </header>
-
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/hzx0910/TopitDownloader/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/hzx0910/TopitDownloader/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/hzx0910/TopitDownloader" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
-
         <hr>
 
         <section id="main_content">
