--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
@@ -18,9 +18,9 @@
       <div class="inner">
 
         <header>
-          <h2>Topit专辑原图批量下载</h2>
+          <h2>Topit涓撹緫鍘熷浘鎵归噺涓嬭浇</h2>
         </header>
-        <hr>
+        <hr/>
 
         <section id="main_content">
           <p>Demo</p>
