--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style type="text/css">
+		a.bookmark-drop-btn {
+    		background: url('images/drop-ok-btn.png') no-repeat scroll 0px 0px transparent;
+    		cursor: move;
+			display: block;
+			height: 56px;
+			width: 290px;
+			margin: 25px 0px 0px;
+		}
+		a.bookmark-drop-btn span {
+    		display: none;
+		}
+	</style>
     <title>Topitdownloader by hzx0910</title>
   </head>
 
@@ -22,9 +35,34 @@
         </header>
         <hr/>
 
-        <section id="main_content">
-          <p>Demo</p>
-        </section>
+        <a class="bookmark-drop-btn" href="javascript:function nofind(img, osrc) {
+    img.src = osrc.replace('/o', '/l').replace('o.', 'l.');
+} 
+(function() {
+    /*page_max 加载的最大页码数 */
+    /*page_min 加载的最小页码数 */
+    var page_max = $('#page-next').prev().text() * 1 || 1;
+    var page_min = 1;
+    var body = '';
+    var href = location.href.split('?')[0];
+    function getpage(n) {
+        if (n < page_min) {
+            document.body.innerHTML = body;
+            return;
+        }
+        $.get(href + '?p=' + n,
+        function(data) {
+            var str = '';
+            $(data).find('#content img.img').each(function(i, v) {
+                var osrc = ($(this).attr('src').indexOf('blank.gif') >= 0 ? $(this).attr('data-original') : $(this).attr('src'));
+                osrc = osrc.replace('/s', '/o').replace('s.', 'o.').replace('/t', '/o').replace('t.', 'o.').replace('/m', '/o').replace('m.', 'o.').replace('/l', '/o').replace('l.', 'o.');
+                body += '<img onerror=\'nofind(this,this.src)\' src=\'' + osrc + '\' /><br/>\r\n';
+            });
+            getpage(--n);
+        })
+    }
+    getpage(page_max);
+})();"><span>Topit工具</span></a>
 
         <footer>
           Topitdownloader is maintained by <a href="https://github.com/hzx0910">hzx0910</a><br>
