--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         1
        </div> 
        <div class="txt">
-        安装工具
+        安装工具书签
        </div> 
       </div> 
       <div class="content clearfix"> 
@@ -109,7 +109,7 @@
         3
        </div> 
        <div class="txt">
-        保存网页
+        保存图片网页
        </div> 
       </div> 
       <div class="content"> 
