--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         1
        </div> 
        <div class="txt">
-        安装工具书签
+        安装工具
        </div> 
       </div> 
       <div class="content clearfix"> 
@@ -95,7 +95,7 @@
         2
        </div> 
        <div class="txt">
-        打开Topit专辑
+        打开专辑
        </div> 
       </div> 
       <div class="content"> 
@@ -109,7 +109,7 @@
         3
        </div> 
        <div class="txt">
-        保存图片网页
+        保存网页
        </div> 
       </div> 
       <div class="content"> 
