--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
        </div> 
       </div> 
       <div class="content"> 
-       <p>打开要下载的专辑</p> 
+       <p>打开要下载的topit专辑</p> 
        <p>点一下刚才保存的标签，稍等片刻</p> 
       </div> 
      </div> 
