--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </div> 
       <div class="content"> 
        <p>打开要下载的topit专辑</p> 
-       <p>点一下刚才保存的标签，稍等片刻</p> 
+       <p>点一下刚才保存的书签，稍等片刻</p> 
       </div> 
      </div> 
      <div class="use-md3 use-md"> 
